clang/test/BSC/Negative/OwnedStruct/partially_moved/partially_moved_input_para_destuctor/partially_moved_input_para_destuctor.cbs
// RUN: %clang_cc1 -verify %s

_Safe T *_Owned safe_malloc<T>(T t);
_Safe void safe_free(void *_Owned p);

_Owned struct S{
public:
    int* _Owned p;
    ~S(This this) {
        safe_free((void* _Owned)this.p); 
    }
};

int main() {
    S s = {.p = safe_malloc(42)};
    int* _Owned p = s.p; 
    safe_free((void* _Owned)p);
    return 0; // expected-error {{partially moved _Owned struct:`s` at scope end, s.p is moved}}
}
